--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -5,6 +5,7 @@
     state: started
     name: nginx-server
     image: 'nginx:{{nginx_version}}'
+    command: /bin/bash -c "envsubst < {{role_path}}/default.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     ports: 
     - "{{ nginx_docker_ports }}"
     volumes:
@@ -15,22 +16,3 @@
       NGINX_HOST: '{{nginx_default_host}}'    
       NGINX_PORT: '{{nginx_default_host}}'
     tty: true
-
-- name: backup default conf file
-  connection: docker
-  hosts: nginx-server
-  fetch: 
-    src=/etc/nginx/conf.d/default.conf
-    dest=/etc/nginx/conf.d/default.conf.dist
-    flat=yes
-
-- name: enable php-fpm
-  template:
-    src='symfony.conf.j2'
-    dest='/etc/nginx/conf.d/default.conf'
-    owner=root
-    group=root
-    mode=0644
-  tags:
-  - nginx
-  - webserver 
