--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for nginx
 nginx_version: '1.9.10'
-nginx_document_root: '/var/www/symfony/web'
+nginx_document_root: '/var/www/html/web'
 nginx_default_host: symfony.dev
 nginx_defaul_port: 80
 nginx_docker_ports: '80:80'
